fix scrollbar inside animations (tmp fix)

--- a/_custom/css/player.css
+++ b/_custom/css/player.css
@@ -282,6 +282,13 @@ body.userinactive #fthypervideo .ftAboutIconContainer {
   	transform: scale(1,1);
 }
 
+/* TODO: Fix sizing & scaling of overlays; */
+.overlayElement .resourceDetail[data-type="image"] .ps-scrollbar-x-rail, 
+.overlayElement .resourceDetail[data-type="image"] .ps-scrollbar-y-rail {
+	display: none !important;
+}
+
+
 .overlayElement svg {
 	top: 10px;
 	left: 10px;
